--- a/sub_21.html
+++ b/sub_21.html
@@ -181,13 +181,13 @@ sup {
 				<div class="article-header-container">
 					<div class="article-header-text">
 						<span>고서 탐구</span>
-						<h4>조리와 음식을 열쇠말로 기록한 유산</h4>
-						<h2>수운잡방</h2>
+						<h4>조선의 조리서</h4>
+						<h2>음식디미방</h2>
 						<!-- <p>장마도 한여름도 눈앞이다. 찌는 더위 아래 너나 할 것 없이 지치게 마련이다. 그래도 한반도를 살아온 사람들, 어떻게든 장마도 무더위도 이겨내고 살아왔다. 어떻게든 건강 지키며 살자고 건강에 잇닿은 담론을 만들어 왔다. 그 대표적인 담론 그리고 행동의 방향을 제시하는 말이 ‘식치(食治)’ 또는 ‘식료(食療)’이다. ‘먹을 식(食)’에 ‘다스릴 치(治)’ 또는 ‘병 고칠 료(療)’가 붙었다. 단박에 의미를 떠올리실 수 있으리라.</p> -->
 						<div class="article-meta">
 							<span>글</span>
 							<span class="pipe">ㅣ</span>
-							<span>고영 작가 </span>
+							<span>고영 작가</span>
 						</div>
 						<div class="writer-box">
 							<div class="writer-box-left">
@@ -216,25 +216,19 @@ sup {
 							<figure>
 								<img src="contents/sub_21_image_1.jpg">
 								<figcaption>
-									자료: 국가유산청
+									자료: 한국학중앙연구원
 								</figcaption>
 							</figure>
 						</div>
 					</div>
-					<p>
-						지난 9월 16일 <수운잡방(需雲雜方)>과 <음식디미방> 두 책이 유네스코 세계기록유산 아시아· 태평양 지역 목록 등재 한국 후보로 선정되었다. <수운잡방>과 <음식디미방>은 각각 책이 쓰일 때의 조리법과 음식 그리고 여기 잇닿은 다채로운 어휘와 표현을 담고 있다. 더구나 두 책은 저마다  16세기와 17세기 한식의 한 면모를 입체적으로 드러내고 있다. 이에 이번 호에서는 <수운잡방>을, 다음 호에서는 <음식디미방>을 살펴보겠다.
-					</p>
-					<p>
-						<수운잡방>은 안동에 사는 광산 김씨(光山金氏) 김유(金綏, 1491~1555)<sup>1)</sup>가 썼다. 그의 손자인 김령(金坽, 1577~1641)이 뒤이어 정리하고 보충했으며, 김유의 셋째 아들 김부륜(金富倫, 1531～1598)의 종가에 전해오다 1986년 세상에 알려졌다. 그 제목부터 살펴보자. ‘수운(需雲)’은 <주역(周易)>의 ‘구름(雲)이 하늘에 오른 것이 수(需)이니, 군자가 이를 본받아 마시고 먹으며 잔치하고 즐긴다(雲上于天需, 君子以飮食宴樂)’라는 구절에서 나온 말이다. ‘수(需)’에는 ‘기다리다’의 뜻도 있다. 구름 끼었다고 바로 비가 내리지도 않는다. 곧 사물에는 때가 있으니, 음식으로 몸과 마음을 기르며 사물의 제 때를 기다린다는 비유가 될 만하다. 이 말은 ‘격조 있는 음식 및 연회’를 비유하는 말로 쓰이곤 했다. ‘잡방(雜方)’은 갖가지 방법이라는 뜻이다. 그러니 ‘수운잡방’을 곧 ‘격조 있는 음식으로 군자를 대접하는 갖가지 방법’으로 새길 수 있는 것이다.<sup>2)</sup>
-					</p>
-					<p>
-						김유는 무엇을 기다리며 음식과 차림을 들여다보고 또 기록했을까. 그의 형 김연(金緣, 1487～1544)은 과거의 모든 단계를 제대로 밟은 뒤, 중앙과 지방의 요직을 두루 지냈다. 떳떳하게, 제대로 양반다운 명예를 이룬 사람이었다. 반면 김유는 생원시 합격을 끝으로 더 이상 응시하지 않았다. 무과마저 잘 안 되자 포기했다. 그런데 김유는 자신의 아들 삼형제 김부인(金富仁), 김부신(金富信), 김부륜(金富倫)를 대학자 이황(李滉, 1502~1571)의 문하에 들여보냈다. 그의 맏며느리는 퇴계 못잖은 인물인 이현보(李賢輔, 1467~1555)의 딸이다. 자신의 딸은 이황의 조카와 혼인시켰다. 생원에 그쳤지만 김유는 원래 넉넉한 집안 출신인 데다 양아버지 김만균(金萬鈞)의 재산까지 상속받아 더욱 부유해졌다.<sup>3)</sup> 집안 전체를 놓고 보면 형님이 중앙에서 활동하느라 고향을 비우고 있는 사이, 집안을 지키는 역할 분담이 딱 맞아떨어진다. 이때 토지와 산림의 경영은 미래를 준비하는 양반의 기본이다. 갈무리한 식료품, 법수를 지킨 조리법과 음식과 차림은 그 경영의 수준을 드러내는 척도이다. 더구나 고향을 지키는 삶에 의미를 부여하자면 일상생활에서나 특별한 행사에서나 격조 높은 손님맞이가 필수다. 제사에서는 양반다운 격식을 더욱 잘 지켜야 한다. 김유는 친부모와 양부모 제사를 이어 나가야 했다. 김유는 음식을 통해 실제로 오늘을 경영하고, 다음을 준비하는 삶을 살았다. 거기서 우러난 일상생활의 한 면이 <수운잡방>에 가 맺혔다. 저 ‘수운’이 그저 말뿐만이 아니었다.
-					</p>
 					<div class="quote-normal">
-						“출세에는 비록 뜻을 접었지만 향리에서 스스로 자족하는 삶을 살았지. 좋은 땅 오천<sup>4)</sup>에 밭과 집을 두고, 주방에는 맛있는 음식이 즐비하며 항아리에는 향기로운 술이 넘쳤네. 그것으로 조상을 섬기고 부모를 봉양하며, 잔치를 즐기었네. 생전에 큰 기쁨이란 자리에 반갑고 귀한 손님들이 모여드는 것.”<sup>5)</sup>
+						“새색시가 시집온 지 사흘 만에 부엌에 가(三日入廚下)/손 씻고 국 끓이고는(洗手作羹湯)/아직 시어미의 식성을 모르니(未諳姑食性)/먼저 시집의 젊은 아낙에게 맛보게 하네(先遣少婦嘗)”
 					</div>
 					<p>
-						이황은 김유를 추모하며 위와 같은 한 구절을 남겼다. 실로 수운과 잡방을 아우른 삶이었다.
+						<음식디미방>은 지난 호에 소개한 <수운잡방>과 함께 유네스코 세계기록유산 아시아·태평양 지역 목록 등재 한국 후보에 오른 조선의 조리서이다. 책을 열면, 본문을 시작하기에 앞서, 앞표지의 뒷면에 위와 같은 시구가 보인다. ‘그래, 꽤 오래 여성 곧 주부이고 주부 곧 여성이었지. 새색시에게 세상이 바라던 바가 있었지’ 하며 살짝 웃음이 난다. 지난 시대가 새삼스레 다가온다. 지난 호에 쓴 대로 <수운잡방>은 조선 전기 경북 양반 남성이 한문으로 써 남긴 기록이다. 이에 견주어 <음식디미방>은 조선 후기 경북 양반 여성이 한글로 써 남긴 기록이다. 살림을 알뜰살뜰 꾸려가는 집안이라면, 가장은 가장대로 조리와 음식을 내 일로 여겼고 주부는 주부대로 조리와 음식을 내 일로 여겼음을 되새긴다.
+					</p>
+					<p>
+						이 책을 쓰고 남긴 장계향(張桂香, 1598~1680)은 임진왜란이 끝나가던 1598년 11월 안동시 서후면 금계리 춘파마을에서 아버지 장흥효(張興孝, 1564~1633)와 어머니 안동 권씨 사이에 외동딸로 태어났다. 아버지 장흥효는 대학자 김성일(金誠一, 1538~1593)의 제자인 데다 명망이 높아 집에는 제자와 방문객의 발길이 끊이지 않았다. 그 덕분이었을 테다. 장계향은 일찌감치 한문을 익혔고, 시문을 지었고, 글씨를 잘 썼다.<sup>1)</sup> <음식디미방>에 보이는 어휘와 문장과 짜임새가 그 재주와 교양의 증거이다. 친정에서 평온하게 살던 장계향은 1616년 열아홉 나이에 출가한다. 첫 부인과 사별한 재령 이씨 이시명(李時明, 1590~1674)과 혼인한 것이다. 장계향은 친정을 떠나 시집이 있는 영해(寧海)<sup>2)</sup>로 가 살다, 1631년 경북 영양군 석보면 원리리 두들마을로 분가해 나간다. 그 뒤 두들마을과 시댁이 있는 영해를 오가며 살다, 1640년 이시명이 두들마을에 집을 짓는<sup>3)</sup> 한편 석계초당(石溪草堂)을 세워 후학 양성에 힘쓰면서 제2의 두들마을살이를 시작한다. 1953년에는 두메산골인 영양의 수비(首比)<sup>4)</sup>로 한 번 더 삶의 터전을 옮겼고, 1672년 다시 안동군 풍산읍 수곡리로 이사한다. 1674년 이시명이 수곡리에서 세상을 뜨자 장계향은 큰아들 이상일(李尙逸)<sup>5)</sup>이 살고 있던 영해를 거쳐 다시 두들마을로 돌아왔다가, 1680년 생애를 마감하였다.
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -244,7 +238,14 @@ sup {
 						</div>
 					</div>
 					<p>
-						분류하는 방식에 따라 다르지만 김귀영의 연구에 따르면, 이 책은 김유가 쓴 상편에 86항, 손자 김령 때까지 보충된 하편에 36항까지 모두 122항을 담고 있다. 이 가운데 술 항목이 절반이다. 그 나머지는 식초, 절임 및 침채(넓은 뜻의 김치), 장, 과자, 기타 반찬, 탕, 두부, 타락(駝酪, 우유), 면, 채소와 과일 파종 및 저장법에 할애하고 있다. 이처럼 술의 비중이 큰 이유가 있다. 격식 있는 접빈객(接賓客)의 자리를 위해서라면 다른 무엇보다 술에 먼저 신경을 써야 하기 때문이다. 양반이 양반다움을 드러내는 의례인 봉제사(奉祭祀)에서도 그렇다. 의례의 핵심에 술이 있고, 의례를 위해 모인 사람들의 단합을 확인할 때 에도 그렇다. 김유가 남긴 술의 주재료는 찹쌀, 멥쌀, 밀가루를 아우른다. 그 기본 제법, 그 제법의 모식도가 한문으로 선명하게 기록되어 있다. 오늘날 술 빚는 분들께도 참고가 될 만한 내용이다.
+						장계향은 점잖은 집안 출신으로 곤궁할 것 없는 집안으로 출가했다. 하지만 장계향의 시대는 광해군과 인조에 걸친 혼란기였고, 정묘호란과 병자호란의 시대였고, 명청교체의 격변기이기도 했다. 굳이 살펴본 이사는 부부가 집안을 지키고, 집안을 다음 대에 이어가기 위한 몸부림이기도 했다. 예컨대 부부는 두들마을로 살림을 날 때 구황을 염두에 두고 참나무를 어마어마하게 심었다. 이곳에서는 여전히 도토리가 잔뜩 난다. 이때의 실제 경영과 재산 관리는 장계향의 몫이었던 듯하다. 양반다운 체면을 차리기 위한 가정경영 일체가 장계향에게 또 다른 의무이자 부담이었으리라. 여기다 음식은 그저그런 집안일이 아니었다. 가문의 품격과 의례의 상징이었다. 더구나 장계향은 큰 고을 영해의 종가(宗家)<sup>6)</sup>로 시집간 처지였다. 제사와 손님맞이, 문중 간의 교류 등 모든 행사의 중심에 종가가 있다. 종가의 살림을 맡은 여성에게, 격식을 갖춘 정갈한 음식과 정성을 다한 장이며 술은 가문의 명예와 직결되었다. 음식의 조화와 균형 그리고 완성도는 맛과 차림으로 드러나게 마련이다. 장계향은 음식에 잇닿은 내 경험과 가풍을 후손에게 전하고 싶었을 테다. <음식디미방> 집필의 동력을 이렇게 짐작해 본다.
+					</p>
+					<p>
+						이 책의 표지에 쓰인 제목은 한자로 쓴 ‘閨壼是議方(규곤시의방)’이다. 그러나 본문 첫 머리에는 그 제목이 순한글로 ‘음식디미방’이라 적혀 있다. 한 책에 두 제목이라니 어찌 된 노릇일까? 뜻부터 풀어보자. ‘규곤(閨壼)’은 여성 공간인 ‘안방’과 ‘안뜰’을 뜻한다. ‘시의방(是議方)’은 ‘올바른 방문’이라는 뜻이다. ‘음식디미방’은 한자로 쓰이지는 않았지만, 언어학에 힘입어 ‘飮食知味方(음식디미방)’으로 새길 수 있다. ‘지(知)’의 고음이 ‘디’이다. 곧 ‘좋은 음식 맛을 내는 방문’으로 풀이할 수 있다.,<sup>7)</sup> 연구자들은 지금 경북대학교 도서관이 소장하고 있는 이 책의 표지와 장정은 후손이 마련한 것이고, ‘규곤시의방’이라는 제목도 격식을 갖추기 위해 한문 감각을 따라 나중에 붙인 것으로 설명한다. 그런데 지금 전해오는 책의 본문이 시작하는 면에서, 본문 시작과 함께 보이는 제목은 ‘음식디미방’이다. 그러니 장계향이 붙인 제목은 ‘음식디미방’이 아닐까 짐작한다. 오늘날 연구자들은 이 책의 제 이름은 ‘음식디미방’으로 잡고, 별칭으로 ‘규곤시의방’을 부기한다.
+					</p>
+					<p>
+						이 책에는 모두 146가지 조리법 및 음식이 실려 있다. 쓰인 대로 따라가면 크게 세 부류가 된다. 곧 면병류(麵餠類, 국수 및 떡 종류) 18항목, 어육류(魚肉類, 생선 및 고기 재료 음식) 74항목, 주국방문(酒麴方文, 술 및 초 종류) 54항목 등이다. 다만 어육류에 여러 가지 다른 음식 30항목이 섞여 있고, 주국방문에서 식초에 관한 3항목에 그친다. 필사 과정에서 또는 책을 묶는 과정에서 혼란이 있었던 듯하다. 아무려나 펼쳐보면 볼수록 당시 안동, 영해, 영양 지역의 밥상이 얼마나 다채로웠는지 잘 드러난다. 또는 고려 말부터 전해 내려오는 ‘상화(霜花)’의 조리법도 실려 있다. 상화는 발효 반죽에 의한 떡으로 고려가요 <쌍화점(雙花店)>의 그 ‘쌍화’이다. <쌍화점>은 이렇게 노래한다. ‘쌍화 사러 갔는데 회회아비[回回아비, 이방인 점주]가 내 손목을 쥐더라.’ 곧 서역에서 들어온, 밀가루 반죽을 부풀려 폭신한 질감의 떡 또는 만두피를 만드는 기술이다. 여기다 다양한 양조법, 국수와 만두 조리법, 떡 및 과자 조리법, 고추 재배가 확산되기 이전 초피와 겨자 등으로 향과 맛을 내는 방식, 온갖 반찬 조리법, 채소 저장법 등이 섬세한 표현과 멋진 문장으로 구현되어 있다. 요컨대 이 책은 행간까지 깊이 읽어낸다면 ‘17세기 조선의 미식 문화 사전’으로 다시 읽을 수 있는 소중한 기록이다. 요리사들에게도 상상력의 원천이 될 만하다. 그 구체적인 내용은 다음 연재분에서 다루도록 하겠다. 
+						<i class="icon_last"></i>
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -253,27 +254,28 @@ sup {
 							</figure>
 						</div>
 					</div>
-					<p>
-						여기에 관능 묘사가 함께다. “빛깔이 맑고 맛이 독하다[色淸味猛]” “향기로우면서 달다(有香而甘)” “맑고 투명하기가 술독 바닥이 보일 정도이고 빛깔은 가을날의 이슬 같다(澄淸到底, 色如秋露)” 등등의 표현을 보고 있노라면, 그 네 글자 한 구의 묘를 오늘날 술 빚는 분들이 광고홍보와 디자인에도 적용할 수 있겠구나 하는 생각이 난다. 이런 표현은 김유 시대의 오이지인 수과저(水瓜菹) 항목에서도 다시 볼 수 있다. 수과저를, <수운잡방>의 설명에 따라 잘 담그면 “국물이 바닥까지 보일 정도로 투과율이 좋아 맑기가 수정 같다(菹水到底淸如水晶)”라고 했다. 유학을 익힌 남성의 한문 기록이라고는 하지만, 한자로 당시의 조선어를 남기기도 했다. ‘모난이법(毛難伊法)’은 도대체 무엇일까? 생가지를 사등분해 양쪽 끝을 네모지게 재단해 만드는 조리법이다. ‘기화장(其火醬)’은 또 무엇일까? 중세 한국어 공부한 사람들은 단박에 알아볼 수 있다. ‘기화’는 ‘기블’을 한자식으로 쓴 것이다. ‘기블’은 ‘기울’을 뜻하니, 기화장이란 곧 겨장이다. ‘토읍침채(土邑沈菜)’는? 동치미이다. 도저히 한자로 표현하기 어려운 어휘라면, 안 쓰고 만 게 아니라, 김유는 이런 식으로 방법을 찾았다. <수운잡방>의 동치미는 음력 정월과 이월 사이에, 오로지 참무와 물과 소금만 써 담근다. 그러고 보니 고추, 고춧가루가 없던 시대의 기록이다. ‘총침채(蔥沈菜)’ 곧 파김치의 모습은 어땠을까? 여기서도 오로지 파와 소금과 물만 써 절여 숙성시켰다. 익으면 껍질과 뿌리를 떼고 흰 부분을 주로 먹었다. 또는 홍당무를 소금에 절이는 모습도 재미나다. 홍당
-						무는 ‘당나복(唐籮蔔)’으로 썼다. 기록한 어느 음식이나 글로만으로도 그 모습이 상상된다. 덜 장황하기에 도리어 조리의 모식도가 단박에 떠오르도록 썼다. 조선 전기 한 양반 남성이 이만한 기록을 남겼다. 미래의 독자까지 기다렸는지는 모르겠다. 그런데 시대가 이렇게 <수운잡방>의 새 독자를 낳고 있다. 그것도 이렇게 적극적인 독자를. 
-						<i class="icon_last"></i>
-					</p>
 					<div class="footnote">
 						<ol>
 							<li>
-								호는 ‘탁청정(濯淸亭)’이다. 오늘날 안동시 와룡면 군자리에 전해 오는 광산 김씨 탁정정공파 종택에 딸린 정자인 탁청정 또한 김유가 1514년에 지은 것이다.
+								장계향의 셋째 아들 이현일(李玄逸, 1627~1704)은 어머니의 삶을 정리한 글 <선비증정부인장씨행실기(先妣贈貞夫 人張氏行實記)>를 남겼다. 이를 통해 장계향의 공부와 교양의 세목을 확인할 수 있다. 위 글에 따르면 장계향은 당시로서는 자신의 재주를 쓸 곳이 없음을 또한 일찌감치 깨달았다
 							</li>
 							<li>
-								이숙인, <유선들의 풍류와 소통—<수운잡방>을 통해 본 16세기 한 사족의 문화정치학>, <<대동문화연구>>, 제80호.
+								정확히는 오늘날의 영덕군 창수면 인량리 인량마을(별칭 ‘나랏골’)이다. 조선 시대에는 영해가 영덕보다 훨씬 큰 고을이었다.
 							</li>
 							<li>
-								김유는 1491년 태어난 지 8개월 만에 5촌 고모 김씨와 고모부 김만균에게 입양되었다. 손계영, <1516년 김유 분재기 및 허여사급입안의 문서 생산 절차와 배경>, <<영남학>>, 제22호, 2012.
+								이 집이 경북 영양군 석보면 두들마을길 77(원리리)에 자리한 석계고택(石溪古宅)이다. 여기서 부부가 실제로 오래 살았다. 장계향은 여기서 늘그막을 보냈고, <음식디미방>을 썼고, 임종을 맞았다.
 							</li>
 							<li>
-								오늘날의 경상북도 안동시 와룡면 군자리길 일대.
+								오늘날의 경북 영양군 영양읍 수비면.
 							</li>
 							<li>
-								“於世雖屈, 於身自足. 勝地烏川, 有田有宅. 庖繼兼珍, 甕溢香醁. 以祠以養, 以燕以樂. 生前大歡, 座上嘉客.” <성균관생원김공묘지명병서(成均生員金公墓誌銘幷序)>에서.
+								이상일의 생모는 광산 김씨이다. 이시명은 광산 김씨 사이에서 1남 1녀를, 장계향과는 6남 2녀를 두었다. 장계향은 7남 3녀를 모두 잘 키웠다. 남매 모두 서로 화목하게 지냈던 것으로 보인다.
+							</li>
+							<li>
+								원래는 적장자로만 이어져 집안의 부계의 정통성을 쥔 큰집을 일컫는다. 그 가운데서도 국가와 세상 사람들로부터 인정받고 추앙받을 때 종가로 인식된다. 종가에는 종가다운 전승과 의례가 있다.
+							</li>
+							<li>
+								백두현, <음식디미방[閨壼是議方]의 내용과 구성에 대한 연구>, <<영남학>>(창간호) 2001. 
 							</li>
 						</ol>
 					</div>
