--- a/sub_23.html
+++ b/sub_23.html
@@ -17,12 +17,12 @@
 	<script src="js/script2.js?ver202502"></script>
 <style>
 :root {
-	--main-color: #499036;
+	--main-color: #CC2F19;
 	--text-color-small: #fff;
 	--text-color-title: #fff;
 	--text-color-title2: #fff;
 	--box-width: 600px;
-	--box-text-color: #499036;
+	--box-text-color: #CC2F19;
 	--bg-color: #ECEEF4;
 }
 body {
@@ -30,7 +30,7 @@ body {
 }
 .article-header-text h2 {
 	font-family: Pretendard;
-	font-size: 4.8rem;
+	font-size: 4rem;
 	font-weight: 600;
 	letter-spacing: -0.1rem;
 }
@@ -100,24 +100,24 @@ p.chef-tag {
 					<div class="article-header-text">
 						<span>셀럽의 식탁</span>
 						<h2>
-							바쁜 현대인을 위한<br>
-							담백한 한입의 보고서
+							한 권의 만화, 한 접시의 상상<br>
+							상상과 현실 사이의 요리를 빚는 셰프
 						</h2>
 						<h4>
-							64만 유튜버
+							조광효 셰프
 						</h4>
-						<h3>
+						<!-- <h3>
 							맛상무
-						</h3>
+						</h3> -->
 						<div class="article-meta">
 							<span class="b">글</span>
 							<span>장희주</span>
 							<span class="pipe">ㅣ</span>
 							<span class="b">사진</span>
 							<span>김준후</span>
-							<span class="pipe">ㅣ</span>
+							<!-- <span class="pipe">ㅣ</span>
 							<span class="b">도움</span>
-							<span>그린시스, 설원 배 제공 국립원예특작과학원</span>
+							<span>그린시스, 설원 배 제공 국립원예특작과학원</span> -->
 						</div>
 					</div>
 					<div class="article-header-image">
@@ -132,7 +132,7 @@ p.chef-tag {
 			<div class="article-body-wrap">
 				<div class="article-prologue">
 					<p>
-						이슈가 되는 음식을 먼저 한입 베어 물고, 과장 없이 판단의 재료를 구독자에게 건네는 유튜버가 있다. 화려한 수사 대신 넓고 얕게 훑되, 솔직함과 정확성은 놓치지 않는다. 그래서 ‘맛상무’는 자신을 ‘많이 아는 사람’이 아니라 ‘먼저 맛보는 사람’이라 소개한다. 맛의 종류와 표현이 과잉인 시대에 필요한 것은, 어쩌면 맛상무의 이토록 담백한 한입의 보고서일지 모른다.
+						만화책을 뒤적이며 떠올린 맛, 만화방에서 태어난 떡볶이, 그리고 지금은 짜장면의 새로운 공식을 찾는 실험실까지. 조광효 셰프의 요리는 늘 상상과 현실 사이를 부지런히 뛰어다닌다.
 					</p>
 				</div>
 				<div class="article-text">
@@ -144,16 +144,24 @@ p.chef-tag {
 						</div>
 					</div>
 					<p>
-						과하게 매운 음식을 맛보고, 과장된 리액션으로 어그로를 끌고, 협찬의 미소로 진실과 거짓이 넘실대는 유튜브 먹방의 바다. 맛을 ‘탐미’한다는 이름 아래, 더 많이 먹고 더 세게 훅을 거는 법이 한때는 정답처럼 통했다. 그 안에서 구독자는 종종 망설인다. 무엇이 ‘맛의 언어’인지, 무엇이 ‘광고의 문장’인지.
+						넷플릭스 시리즈 〈흑백요리사〉 속, 각자의 사연을 품은 셰프들 가운데 단연 시선을 끈 인물이 있었다. 요리를 독학으로 배운 조광효 셰프. 그에게 요리의 교과서는 학교가 아니라 ‘만화책’이었다.
+					</p>
+					<p>학창 시절, 늘 만화를 끼고 살았던 소년은 자연스레 미술대학으로 진학했고, 졸업 후에는 자전거 회사에서 제품 디자이너로 일했다. 그러던 어느 날, 감성 만화방이 인기를 얻던 시절 그도 친구와 함께 “우리도 저런 거 해보자”는 마음으로 2015년 작은 만화방을 열었다. 
 					</p>
 					<p>
-						그 사이에서 맛상무는 톤을 낮춘다. 자극 대신 정확한 전달을 하려 애쓰고, 과감한 편집 대신 첫 입의 직관을 그대로 보여주려 한다. ‘대신 맛봐드립니다’라는 자세로, 새로 나온 제품을 모른 채 지나칠 바쁜 사람들을 위해 먼저 ‘한입’ 베어 문다. 그 한입은 팩트 위에 감각을 얹되, 중심은 늘 객관적이다. 그래서 남의 리뷰로 입맛이 ‘길들지’ 않도록 선행 리뷰를 일부러 보지 않고, 촬영 전 미리 시식도 하지 않는다. 광고 역시 본인이 먼저 선택한다. 돈이 먼저가 아니라, 신뢰가 먼저라는 뜻이다.
+						하지만 현실은 달랐다. 돈이 없어서 만화책은 몇 권 되지 않았고, 그래서 ‘음식을 팔자’는 쪽으로 방향을 틀었다. 그때 만든 메뉴가 바로 만화 속에서 본 음식들이었다. “만화를 보며 먹을 수 있는 음식이 있으면 좋겠다”는 가벼운 발상으로 시작한 메뉴, 떡볶이에 밥 덩어리를 얹은 ‘떠먹는 떡볶이’. 가볍게 시작한 시도였지만, 그 한 접시가 훗날 조광효라는 이름을 요리의 세계로 끌어당긴 첫 단서가 됐다. 
 					</p>
 					<p>
-						콘텐츠의 스펙트럼도, 편의점 신제품부터 식당 리뷰까지 두 축을 병행한다. 그래서 맛상무의 유튜브는 편의점에 매주 쏟아지는 신제품을 빠르게 가늠해주는 ‘정보의 장’이자, 한 끼의 현장감으로 타인의 시간을 절약해 주는 ‘안내서’다. 두 세계 사이에서 그는 어그로와 정석의 경계를 무리 없이 타며, ‘과잉’ 대신 ‘균형’을 선택한다.
+						그에게 만화는 여전히 가장 확실한 영감의 원천이다. 춘권, 타르트, 동파육처럼 만화 속에 등장하는 음식을 실제로 구현하며 ‘상상 속 맛’을 현실의 레시피로 옮긴다. 중국 주부들이 즐겨보는 요리책을 참고하고, 현지 가정식 조리법을 연구하며 상상과 기술 사이의 균형을 찾는다. 그의 요리는 늘 그 사이에 있다. 만화의 상상과 현실의 맛, 그리고 요리를 향한 진지한 탐구심 사이에.
 					</p>
 					<p>
-						목소리는 조용하다. 그래서 때로는 나긋한 ASMR처럼 잠들기 좋은 배경음이 된다. 영상 길이도 대개 5분 안팎. 정보만 쏙 뽑아가기 좋은 메모처럼 가볍게 스친다. 그렇게 그의 유튜브는 64만 명이라는 구독자 수나 몇 만회라는 조회수보다, 그의 입을 통해 전해지는 제품과 음식에 대한 신뢰의 잔향으로 기억된다. 과잉의 시대에 드문 태도, 그래서 맛상무의 리뷰는 더욱 믿음직한 한입이다.
+						현재 그는 자신이 직접 운영하는 공간 ‘조광201’에서 짜장면과 중식의 새로운 공식을 연구하고 있다. 밀가루를 블렌딩해 직접 면을 뽑고, 불맛을 입히는 새로운 방식을 실험하며 ‘낯익은 재료로 낯선 맛을 내는 법’을 찾아가고 있다. 이곳은 단순한 식당이 아니라, 조광효 셰프의 실험실이다.
+					</p>
+					<p>
+						그는 기술을 넘어 감정의 언어로서도 요리를 이야기하기도 한다. 최근에 쓴 두 권의 책 『만찢남의 오타쿠 레시피(세미콜론)』와 『만찢남의 인생 정식(책깃)』에는 그의 실험과 철학이 담담히 녹아 있다. 요리를 통해 사고하고, 생각을 조리하며, 일상의 감정을 한 접시에 담아내는 사람.
+					</p>
+					<p>
+						조광효 셰프는 오늘도, 작은 공간 한 켠에서 정답을 찾기보다 새로운 해석을 위한 실험을 계속하고 있다.
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -163,16 +171,28 @@ p.chef-tag {
 						</div>
 					</div>
 					<h5>
-						44세에 유튜브를 시작하셨는데, 어떤 마음으로 도전하셨나요? 초기의 부정적 반응 속에서도 이어갈 수 있었던 힘은 무엇이었나요?
+						어린 시절 라면을 남다른 방식으로 끓여 드셨다고 들었어요. 그때만의 비법이 있었나요?
 					</h5>
 					<p>
-						20대나 30대였다면 시작하지 않았을 겁니다. 사람들 앞에 나서는 걸 좋아하지 않는 성격이거든요. 그런데 첫 영상을 올린 날, 가슴이 뜨겁게 달아오르더라고요. 40대 중반까지 직장 생활을 하며 ‘이후의 삶’을 오래 고민했고, 결국 내가 좋아하는 일을 해보자며 용기 내 시작했습니다. 당시만 해도 40대 남성 유튜버는 드물었고 비난도 있었죠. 그래도 화면 너머에서 응원해 주시는 분들이 계셔서, 그 덕분에 꾸준히 지속할 수 있었습니다. 지금은 ‘맛상무’를 알아봐 주시는 분도 많아져서 더없이 감사한 마음입니다. 
+						어릴 때 TV에서 스쳐 지나간 장면을 따라 해봤는데, 라면에 식초를 넣어보니 의외로 맛이 괜찮더라고요. 다들 신기해했지만, 제게는 그때가 ‘나만의 비법’을 찾은 순간이자 요리가 재미있다고 느낀 첫 경험이었어요. 지금은 라면을 끓일 때 한 봉지 기준으로 설탕 한 꼬집, 미원 한 꼬집을 꼭 넣습니다. 그러면 국물 맛이 한결 또렷해지고 감칠맛이 살아나요.
 					</p>
 					<h5>
-						현재 구독자가 약 64만 명이에요. 사랑받는 이유는 뭘까요?
+						셰프님은 만화에서 많은 영향을 받으신 것 같아요. 특히 좋아했던 만화와 그 이유는 무엇인가요? 
 					</h5>
 					<p>
-						유튜브는 결국 ‘재미’와 정보 그리고 때로는 ‘사람의 매력’으로 보시는 것 같아요. 제 채널도 약간의 재미와 충분한 정보를 드리려 했고, 그래서 ‘구독하면 도움이 되겠다’라고 생각해 주신 게 아닐까 해요. 그 믿음에 보답하기 위해 더 열심히 하겠습니다.
+						어릴 때 〈미스터 맛짱〉을 정말 좋아했어요. 주인공이 다소 소시오패스처럼 보이기도 하지만, 요리에 임할 때만큼은 누구보다 진지한 인물이거든요. 항상 ‘이기는 요리’를 하려고 하는데, 그 승부욕이 단순히 결과에만 있는 게 아니라 요리를 완성하기 위해 시도하는 엽기적이면서도 기발한 방식들에 있죠. 그런 과정을 보면서 ‘요리란 이렇게도 생각할 수 있구나’ 하는 발상의 전환을 자주 느꼈던 것 같습니다.
+					</p>
+					<h5>
+						만화 속 레시피를 실제로 따라 해보신 적도 있나요? 
+					</h5>
+					<p>
+						그때 만화에 나온 레시피 중 일부는 직접 시도해 보기도 했어요. 예를 들어 고추기름 같은 건 실제로 만들어봤죠. 그런데 무엇보다 흥미로웠던 건, 당시 일본 요리 만화들이 이미 ‘분자요리’처럼 과학적인 접근을 시도하고 있었다는 점이에요. 꽤 오래전 이야기인데도 요리에 과학의 원리를 접목하려는 시도가 보였죠. 그런 점들이 제게는 굉장히 신선했고, 요리를 전혀 다른 시선으로 바라보게 해준 계기가 됐습니다.
+					</p>
+					<h5>
+						만화방에서 시작된 떡볶이가 셰프님의 요리 인생의 첫 출발점이 아니었을까 싶어요. 레시피는 어떻게 탄생했나요?
+					</h5>
+					<p>
+						그날따라 친구와 다투고 있었어요. 떡볶이는 이미 만들어둔 상태였는데, 실랑이 중에 밥버거가 그릇에 떨어졌고, 그걸 맛본 순간 의외로 잘 어울리더라고요. 그래서 “이걸 좀 더 다듬어보자” 하면서 발전시키기 시작한 게 비룡 떡볶이의 시작이었죠. 특별한 비법이 있었던 건 아니에요. 다만 만화책을 보면서 한 손으로 숟가락만으로도 편하게 먹을 수 있는, 만화방 분위기에 어울리는 ‘떠먹는 떡볶이’를 만들고 싶었어요. 지금 돌이켜보면 그걸 ‘요리’라고 부를 수 있을지 모르겠지만, 제게는 창의적인 시도의 첫걸음이었던 것 같습니다.
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -182,22 +202,34 @@ p.chef-tag {
 						</div>
 					</div>
 					<h5>
-						팩트 위주의 전달이 인상적입니다. 리뷰 과정에서 특히 신경 쓰는 부분은 무엇인가요? 
+						거의 독학으로 요리를 익히셨다고 들었어요. 셰프님만의 공부법이나 연구 방식이 궁금합니다.
 					</h5>
 					<p>
-						팩트만 나열하진 않습니다. 팩트 위에 제 감각을 얹되, 핵심은 언제나 정확한 전달이에요. 저는 시청자 대신 먼저 맛을 보는 사람이라고 생각합니다. 시간이 없거나 신제품을 놓친 분들을 위해 먹어보고 분명하게 알려드리죠. 최대한 객관을 지키려 하지만 결국 제 입맛이 개입될 수밖에 없습니다. 그래서 사실성과 객관성의 균형을 무엇보다 중요하게 봅니다.
+						요리를 시작하기 전에 먼저 ‘내가 어떤 음식을 만들고 싶은지’ 를 오래 고민해요. 어느 가격대에서, 어떤 맛을 낼지, 어떤 조리 방식이 어울릴지 등을 하나하나 노트에 정리하죠. 그다음에는 필요한 조리 기법이나 재료를 찾아보고, 실제로 만들어보면서 실패 요인을 하나씩 체크합니다. 말하자면 ‘오답 노트’ 를 계속 써 내려가며 음식의 구조를 조립해 가는 방식이에요. 자전거를 조립한다고 생각하면 비슷해요. 먼저 프레임을 세우고, 바퀴를 올려봤다가 안 맞으면 빼고, 체인을 갈아 끼우고. 그런 식으로 머릿속에서 조합을 끊임없이 바꿔가며 완성해 나갑니다.
 					</p>
 					<h5>
-						리뷰하는 음식의 폭이 넓습니다. 선택의 기준이 있나요?
+						일식·분식·중식 등 스펙트럼이 넓은데, 특히 중식에서 매력을 느끼는 이유는 무엇인가요? 
 					</h5>
 					<p>
-						유튜브는 보통 한 방향으로 좁고 깊게 가는 게 정석입니다. 하지만 저는 편의점도, 식당도 합니다. 그래서 편의점 리뷰를 기대하던 분이 식당 영상을 보면 낯설 수 있죠. 두 영역 모두를 사랑하기에 쉽게 놓지 못합니다. 참고로 한국의 편의점은 5만 개가 넘습니다. 교회나 치킨집보다 많아요. ‘편의점 음식을 누가 먹냐’고들 하지만, 실제로 많은 분들이 그곳에서 식사하고 제품을 구매합니다. 매주 쏟아지는 신제품을 리뷰하는 일이 유의미한 이유입니다. 다만 두 축을 함께 가져가다 보면 콘텐츠가 양분된다는 고민은 늘 남습니다.
+						저렴한 재료로도 놀랄 만큼 맛있는 요리를 만들 수 있다는 점이에요. 그래서 요리사가 원재료에 개입할 수 있는 여지가 정말 많더라고요. ‘이 부분은 오일로 맛의 층을 줄 수 있겠구나’, ‘여기는 식감을 완전히 다르게 만들어볼 수 있겠네’ 하며 다양한 시도를 해볼 수 있죠. 정해진 요리의 틀에서 조금 벗어나니까 오히려 제가 개입할 수 있는 지점이 많아지고, 그만큼 더 흥미롭게 느껴집니다.
 					</p>
 					<h5>
-						매주 2~3편의 리뷰 영상을 꾸준히 올리시는데, 가장 기억에 남는 영상이 있나요?
+						『만찢남의 오타쿠 레시피』에는 다양한 메뉴가 등장하지만, 의외로 레시피는 심플하더라고요. 선정 기준이 있었나요?
 					</h5>
 					<p>
-						2018년 여름, 50년 동안 중식을 지켜오신 사장님을 찾아간 짧은 영상이 가장 선명합니다. 그해 남편을 먼저 떠나보내고, 할머니가 혼자 가게를 지키고 계셨어요. “가만히 있으면 더 힘들 것 같아, 뭐라도 해야 잊을 수 있을 것 같아” 하시며 제게 짬뽕 한 그릇을 끓여 주셨는데, 그 장면은 볼 때마다 지금도 가슴이 찡합니다. 그 영상이 알려줬죠. 유튜브는 결국 우리 삶을 담는 그릇이라는 걸. 영상은 유튜브에서 ‘50년 된 중국집’을 검색하시면 보실 수 있습니다.
+						영감이 꼭 만화책에서만 나오진 않아요. 다만 만화를 보면서 “요리를 구상하는 나만의 방식”을 한 번 정리해보고 싶다는 생각이 들었어요. 만화 속 음식을 그대로 따라 만들 때도 있지만, 그 장면에서 느껴지는 분위기나 감정을 요리로 어떻게 표현할까 고민하는 과정이 더 흥미로웠거든요. 그래서 책도 그런 느낌을 살리고 싶었어요. 내용 자체가 가볍고, 어린이 공작책 같은 분위기랄까요. 집에 있는 젓가락, 종이컵, 페트병 같은 걸로도 뚝딱 무언가 만들어낼 수 있듯이, “레시피도 너무 어렵거나 복잡하게 가지 말자”는 마음으로 쉽고 재밌게 구성했습니다.
+					</p>
+					<h5>
+						식재료를 바라보는 셰프님의 관점이 궁금해요.
+					</h5>
+					<p>
+						식재료가 정말 가장 중요하다고 생각해요. 좋은 재료는 땅에서부터 이미 ‘요리’가 거의 완성된 상태로 올라오는 경우도 있거든요. 그래서 그런 재료들을 만날 땐 괜히 “멋을 부리지 말자, 있는 그대로의 맛을 살리자”는 생각을 많이 합니다. 또 하나는 로스를 어떻게 줄일까, 그리고 이 재료를 다른 요리에 어떻게 다시 활용할 수 있을까를 늘 고민해요. 결국 요리는 그런 기본적인 생각들에서 출발하는 것 같습니다.
+					</p>
+					<h5>
+						셰프로 살아오면서 기억에 남는 특별한 순간이 있으셨을까요?
+					</h5>
+					<p>
+						아무래도 ‘흑백 요리사’에 출연했던 경험이 가장 인상 깊었어요. 그 무대에서 요리하고, 함께했던 셰프들을 가까이에서 보는 것 자체가 큰 배움이었죠. “아, 이분들은 진짜 요리사다”라고 느껴지는 분들이었거든요. 그런 분들 옆에서 요리했다는 사실만으로도 제게는 너무 큰 경험이었어요. 15인까지 올라갔던 것도 물론 의미가 있었지만, 그 과정 자체가 제게는 더 값진 시간이었습니다.
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -207,57 +239,50 @@ p.chef-tag {
 						</div>
 					</div>
 					<h5>
-						배가 제수용 이미지를 벗고 일상 과일로 자리 잡을 수 있도록 농촌진흥청에서 신품종을 많이 개발하고 있어요. 예를 들어 ‘설원’은 껍질을 깎아둬도 변색이 적고, ‘그린시스’는 사과 느낌과 배의 수분감을 같이 갖춘 품종인데요. 혹시 직접 맛보시고 ‘솔직한’ 리뷰해 주실 수 있을까요?
+						앞으로 꼭 해보고 싶은 요리가 있을까요?
 					</h5>
 					<p>
-						그린시스는 배에서 신맛이 느껴져요. 정확히 말하면 배와 사과를 반반 섞은 듯한 맛이에요. 배가 상큼하고, 사과처럼 약간의 산미가 있어요. 보통 배는 석회질 때문에 거칠거나 푸석하게 느껴질 때가 있는데, 이건 그런 게 전혀 없어요. 사과 같은 아삭한 질감에 배 같은 풍부한 수분이 있고, 상큼함과 은근한 신맛이 어우러져 정말 맛있네요. 설원은 조직이 정말 치밀하고, 한입 베면 과즙이 확 터집니다. 수분이 많고 단맛이 좋아요. 아까 그린시스가 상큼하고 새콤했다면, 이건 단맛이 확실히 돋보이고 수분도 아주 풍부합니다. 맛있어요. ‘설원’이라고 하지 말고 ‘당원’이라고 불러도 되겠는데요? 
+						요즘은 짜장면을 집중적으로 연구하고 있어요. 밀가루를 종류별로 블렌딩하는 것부터 시작해서, 면에 불맛을 입히는 법, 연기를 스며들게 하는 방법까지 세세하게 테스트 중이에요. 화려한 재료를 쓰지 않아도, 집에서 면만 넣으면 불향이 살아 있는 짬뽕이나 짜장면을 만들 수 있는 방법을 찾고 있습니다. 제가 하고 싶은 건, 남들이 아는 짜장면에 내가 어떻게 ‘살짝’ 개입할 수 있을까 그 지점을 찾는 거예요. 말하자면 요리에 조금 덜 개입하면서도, 새로운 맛의 문을 열 수 있는 방법을 찾고 연구하고 있는 거죠. 
 					</p>
 					<h5>
-						제빵사 자격증도 있고, 요리도 잘하신다고요.
+						셰프님이 그리는 앞으로의 요리 세계는 어떤 모습인가요.
 					</h5>
 					<p>
-						‘잘한다’기보다 집에선 제가 전담 요리사예요. 가족이 좋아해 주고, 저도 맛있게 먹습니다. 주말엔 늘 제가 차립니다. 즐겨 하는 건 소고기뭇국, 김치찌개, 스테이크 같은 기본 메뉴고, 바비큐를 특히 좋아해요. 2018년 가장 더운 여름, 한 달 동안 횡성을 오가며 대한아웃도어바비큐협회 회장님께 사사해 바비큐 마스터 자격증을 땄습니다. 다만 바비큐는 자격증보다 경험이 훨씬 중요하죠. 많이 구워본 사람이 강자입니다. 무엇보다 바비큐의 핵심은 불 앞에서 함께 보내는 시간이에요. 가족·지인과 1시간에서 길게는 15시간까지 이야기를 나누는 그 순간이 정말 좋습니다. 그런 문화를 더 많은 분들께 알리고 싶습니다.
-					</p>
-					<h5>
-						앞으로의 계획과 목표가 궁금해요. 
-					</h5>
-					<p>
-						거창한 계획보다 더 편하고 더 진실하게 찍고 싶습니다. 카메라 앞에 서면 아직도 어깨에 힘이 들어가거든요. 골프가 힘을 빼야 공이 곧게 나가듯, 저도 힘을 덜어 밥 먹듯 자연스러운 영상으로 다가가고 싶어요. 제 목표는 한결같습니다. 오래오래 소통하고, 도움이 될 수 있으면 기꺼이 돕는 것. 촬영 후 사장님들께서 “덕분에 힘이 났다, 장사가 좋아졌다”라고 연락 주실 때 가장 큰 보람을 느끼고, 매너리즘도 금세 사라집니다. 앞으로도 오래, 길게, 제 속도로 가겠습니다. 맛상무를 계속 사랑해 주신다면, 재미있고 유익한 영상으로 꾸준히 보답하겠습니다. 
+						2019년에 요리를 본격적으로 시작했을 때 세운 꿈이 하나 있어요. 바로 ‘미쉐린 빕 구르망’ 선정이에요. 다른 꿈 없이 지금도 계속 그 꿈만 꾸고 있습니다. 내년이든, 내후년이든 언젠가 꼭 이뤄내고 싶어요.
 						<i class="icon_last"></i>
 					</p>
 					<article>
 						<div class="chef-box">
 							<div class="chef-box-header">
 								<span>
-									맛상무의 식탁 
+									조광효 셰프의 식탁 
 								</span>
 								<h6>
-									정성과 시간이 구워내는<br>
-									바비큐의 맛
+									계란과 닭!<br>가장 단순해서 가장 맛있는
 								</h6>
 							</div>
 							<div class="chef-box-image">
 								<figure><img src="contents/sub_23_image_box.jpg" /></figure>
 							</div>
 							<blockquote>
-								“바비큐를 특히 좋아해요. 사실 고기 맛도 중요하지만, 진짜 핵심은 불 앞에서 정성 들여 함께하는 시간이 더 특별한 것 같아요.”
+								“계란이랑 닭을 정말 좋아해요. 집에서는 아들이 계란말이를 좋아해서 자주 해주고요. 닭 요리는 복잡하게 하지 않아요. 그냥 물에 삶아 끓여 먹는 단순한 방식이 좋습니다. 재료가 좋으면 그 자체로 충분히 맛이 나니까요.”
 							</blockquote>
 							<p>
-								농촌진흥청은 한우를 보다 다양하게 즐길 수 있도록 1등급 한우 32개 부위의 육질과 영양을 분석했다. 이 가운데 구이용 맛 평가에서는 본갈비, 업진살, 살치살 순으로 맛 점수가 높았다. 소는 13개의 갈비뼈를 가지고 있는데, 이 중 본갈비는 제1~5번 갈비뼈를 분리·정형한 부위를 말한다.
+								재래종 토종닭은 기름기가 적고 콜라겐이 풍부해 쫄깃한 식감과 깊은 감칠맛을 자랑하지만, 사육 기간이 길다는 한계가 있었다. 이를 보완하기 위해 농촌진흥청이 개발한 품종이 바로 ‘우리맛닭 1호’다. 빠르게 자라는 닭, 맛이 좋은 닭, 알을 잘 낳는 닭 이 세 가지 순계를 선발해 성장 속도와 풍미를 모두 잡은 새로운 토종닭을 만들어낸 것이다.
 							</p>
 							<p>
-								소고기를 고를 때는 육질을 눈으로 확인하는 것이 중요하다. 고기 색은 밝은 선홍색, 지방색은 우윳빛을 띠면서 윤기가 나는 것이 좋다. 또한 살코기 속에 가늘고 섬세한 근내지방(마블링)이 고르게 퍼져 있는지 살펴보고, 절단면이 건조하지 않고 탄력이 있는 고기를 선택한다.
+								이후 2010년에는 ‘우리맛닭 2호’가 탄생했다. 1호의 육질을 유지하면서도 성장 속도를 더욱 높이는 데 중점을 두었고, 실제로 1호보다 약 30% 빠르게 자란다. 육질 역시 한층 부드럽다는 평가를 받는다.
 							</p>
 							<p>
-								소고기는 요리 방법에 맞는 부위 선택도 필요하다. 예를 들어, 구이용 갈비는 선홍색을 띠고 근내지방이 적당하며 근막이 적은 것이 좋다. 뼈에 붙은 고기는 다소 질길 수 있는데, 이때는 고기의 결을 보며 직각으로 칼집을 넣으면 한결 연하게 즐길 수 있다.
+								지금도 우리맛닭의 개량은 계속되고 있으며, 앞으로는 용도와 목적에 맞춘 더 다양한 국산 토종닭을 만나볼 수 있을 것으로 기대된다.
 							</p>
 							<div class="chef-qr">
 								<figure>
 									<img src="contents/sub_23_image_qr.png">
 								</figure>
 								<div class="chef-qr-text">
-									<h4>김혜선 편!</h4>
-									<p class="chef-tag">지금 바로 QR코드를 스캔하고 감상해 보세요! 맛상무의 인터뷰 영상은 12월호에서 만날 수 있습니다.</p>
+									<h4>맛상무 편!</h4>
+									<p class="chef-tag">지금 바로 QR코드를 스캔하고 감상해 보세요! 조광효 셰프의 인터뷰 영상은 1월호에서 만날 수 있습니다.</p>
 								</div>
 							</div>							
 						</div>
