--- a/sub_22.html
+++ b/sub_22.html
@@ -17,9 +17,9 @@
 	<script src="js/script2.js?ver202502"></script>
 <style>
 	:root {
-		--main-color: #E56B73; /* 메인배경, 비포애프터제목 */
+		--main-color: #E8F3E9; /* 메인배경, 비포애프터제목 */
 		--text-color-small: #000; /* 라벨, 부제목 */
-		--text-color-title: #F8E7E8; /* 제목 */
+		--text-color-title: #00B09A; /* 제목 */
 	}
 .article-header-container {
 	grid-template-columns: 1fr 1.5fr;
@@ -33,7 +33,7 @@
 .article-text h4 {
 	margin-top: 2rem;
 	text-align: center;
-	color: var(--main-color);
+	color: var(--text-color-title);
 }
 .article-prologue p {
 	color: var(--text-color-small);
@@ -55,13 +55,13 @@
 	text-decoration: none;
 	font-family: 'Cafe24Shiningstar';
 	font-size: 3rem;
-	color: var(--main-color);
+	color: var(--text-color-title);
 }
 .house-box p {
 	font-size: 2rem;
 	line-height: 1.8;
 	text-decoration: underline;
-    text-decoration-color: var(--main-color);
+    text-decoration-color: var(--text-color-title);
     text-underline-offset: 5px;
     text-decoration-thickness: 1px;
     word-break: keep-all;
@@ -71,9 +71,13 @@
 }
 .article-link {
 	display: flex;
-	gap: 1rem;
+	gap: 3rem;
 	margin-top: 3rem;
 	justify-content: center;
+}
+.article-link-in {
+	display: flex;
+	gap: 1rem;
 }
 .article-link-left {
 	width: 4.5rem;
@@ -132,18 +136,18 @@
 				<div class="article-header-container header-normal">
 					<div class="article-header-text">
 						<span>시골집꾸 라이프</span>
-						<h4>
+						<!-- <h4>
 							햇살과 바람을 닮은 집에서
-						</h4>
+						</h4> -->
 						<h2>
-							한솔이 가꾸는 소소한 낭만
+							자연의 숨결을 품은 연화의 리틀포레스트
 						</h2>
 						<div class="article-meta">
 							<span class="b">글</span>
 							<span>장희주</span>
 							<span class="pipe">ㅣ</span>
 							<span class="b">사진제공</span>
-							<span>박한솔</span>
+							<span>연화</span>
 						</div>
 					</div>
 					<div class="article-header-image">
@@ -158,34 +162,49 @@
 			<div class="article-body-wrap">
 				<div class="article-prologue">
 					<p>
-						한적한 시골에서 남편, 세 마리 강아지와 함께 살아가는 한솔. 집을 가꾸고 계절마다 나물을 말리며, 거실 테이블에 앉아 글을 쓰고 마당에 모이통을 달아 새들을 맞이한다. 이렇게 소소한 일상 속에서 그는 낭만을 차곡차곡 쌓아가고 있다. ‘잘 가꾼 집은 곧 잘 가꾼 삶’이라는 믿음으로, 한솔은 집 안팎을 따뜻하게 채워가며 자연과 어우러진 삶을 이어간다.
+						도시와 시골을 오가며 자연과 함께 살아가는 연화. 영화 <리틀 포레스트> 속 주인공처럼, 그녀는 스스로 흙을 만지고 집을 고쳐가며 삶의 온도를 되찾았다. 대나무 숲이 집을 감싸고, 강아지 포비가 뛰노는 마당이 있는 이곳. 그녀의 손끝에서 다시 태어난 ‘초록나무집’은 그야말로 한 편의 동화다. 
 					</p>
 				</div>
 				<div class="article-link">
-					<div class="article-link-left">
-						<figure>
-							<a href="https://www.instagram.com/ssoltable/" target="_blank"><img src="contents/sub_22_qr.png"></a>
-						</figure>
+					<div class="article-link-in">
+						<div class="article-link-left">
+							<figure>
+								<a href="https://instagram.com/yeonhwa.bby" target="_blank"><img src="contents/sub_22_qr_1.png"></a>
+							</figure>
+						</div>
+						<div class="article-link-right">
+							<p>
+								<span>인스타그램</span><br>
+								<a href="https://instagram.com/yeonhwa.bby" target="_blank">instagram.com/yeonhwa.bby</a>
+							</p>
+						</div>
 					</div>
-					<div class="article-link-right">
-						<p>
-							<span>인스타그램</span><br>
-							<a href="https://www.instagram.com/ssoltable/" target="_blank">instagram.com/ssoltable/</a>
-						</p>
+					<div class="article-link-in">
+						<div class="article-link-left">
+							<figure>
+								<a href="https://www.youtube.com/@chonacottage" target="_blank"><img src="contents/sub_22_qr_2.png"></a>
+							</figure>
+						</div>
+						<div class="article-link-right">
+							<p>
+								<span>유튜브</span><br>
+								<a href="https://www.youtube.com/@chonacottage" target="_blank">youtube.com/@chonacottage</a>
+							</p>
+						</div>
 					</div>
 				</div>
 				<div class="article-text">
 					<h4>
-						30년 된 벽돌집에 새로운 이야기를 쓰다
+						흐름에 몸을 맡긴 리모델링의 시간
 					</h4>
 					<p>
-						한솔 부부는 5년 연애 끝에 결혼에 골인했다. 남편이 군 단위 지역으로 이직한 일이 부부에게는 하나의 기회가 됐다. 늘 한적한 곳에서 살고 싶었던 부부는 얼마 지나지 않아 숲 속 전셋집에서 시골살이를 시작했다. 3년 넘게 살아보니 자신감이 생겼고, ‘진짜’ 보금자리가 되어줄 집을 찾기 위해 나섰다. 그렇게 두 사람이 발견한 집은 작은 마을에 자리한, 1990년대에 지어진 30년 된 벽돌집이었다. 집을 보자마자 특별한 이유가 없는데도 ‘이 집이다’라는 확신이 들었다고 한다. 
+						연화는 건축을 전공한 적도, 관련 일을 해본 적도 없었다. 그럼에도 70년 된 한옥을 직접 고쳐 살겠다는 결심을 하게 된 건, 오랜 꿈을 현실로 옮기고 싶은 용기에서 비롯됐다.
 					</p>
 					<p>
-						벽돌집은 원래 노부부가 살던 집이었다. 주변에서는 말렸지만, 부부는 오히려 옥상이 있는 슬라브 주택이 마음에 들었다. 어릴 적 추억을 떠올리게 하는, 익숙하고 정겨운 집이었기 때문이다. 
+						셀프로 집을 고치는 과정은 결코 쉽지 않았다. 몸도 마음도 지치는 순간이 많았고, 몇 번이나 포기하고 싶었던 때도 있었다. 그러나 그럴 때마다 주변의 작은 도움과 응원이 힘이 되어, 결국 지금의 따뜻한 집이 완성될 수 있었다.
 					</p>
 					<p>
-						처음 집을 보러 갔을 때 실내에 걸려 있던 가족사진도 인상 깊었다고 한다. 공사를 시작하던 날, 천장에서 발견한 상량문 또한 반가운 흔적이었다. 두 사람은 따스한 이야기가 켜켜이 쌓였을 오래된 집에 새로운 이야기를 더할 수 있다는 것이 행운처럼 느껴졌다. 동네 어르신들 역시 작은 시골 마을에 젊은 부부가 찾아온 것을 반갑게 맞이해 주셨다고 한다.
+						1년이 넘는 공사 기간 동안 계획대로 되지 않은 일은 셀 수 없었다. 처음에는 예기치 못한 변수 하나하나에 흔들리고, 모든 걸 통제하려 애쓰며 스스로를 몰아붙이기도 했다. 하지만 시간이 흐르면서 연화는 서서히 깨달았다. ‘모든 걸 완벽히 조종할 수는 없어도, 그저 흘러가는 대로 두면 괜찮다’는 것을. 오는 건 오는 대로, 가는 건 가는 대로 받아들이는 법. 흐르는 물을 손으로 막을 수 없듯, 삶도 그렇게 흘러야 비로소 제 빛을 낸다는 사실을. 이제 그녀에게 그 흐름은 두렵지 않다. 오히려 그 속에서 새로운 길이 열리고, 그 길 위에서 삶의 진짜 재미를 다시 발견하고 있다.
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -196,24 +215,16 @@
 					</div>
 					<div class="house-box" style="margin-top: -1rem;margin-bottom: 0;">
 						<div style="margin-left:35%">
-							<h5>거실</h5>
+							<h5>마당</h5>
 							<p>
-								이 집의 중심은 주방과 거실이 이어지는 공간이에요. 원래 안방이 있던 자리를 터서 주방과 거실을 일자로 연결했죠. 코너에는 ㄱ자 창을 내어, 남향인 주방 창 너머로 사계절 내내 펼쳐지는 풍경을 바라보며 요리할 수 있게 됐습니다.
+								마당은 반려가족인 포비와 함께하는 공간이기 때문에, 포비가 신나게 뛰어놀 수 있도록 잔디를 심었어요. 포비가 좋아하는 모습을 보면 저도 행복하답니다.
 							</p>
 						</div>
 					</div>
-					<div class="article-image" style="margin-top: -3rem;margin-bottom: 4rem;">
+					<div class="article-image" style="margin-top: -1rem;margin-bottom: 8rem;">
 						<div class="article-image-container">
 							<figure>
 								<img src="contents/sub_22_image_2.png">
-							</figure>
-						</div>
-					</div>
-
-					<div class="article-image small-image2">
-						<div class="article-image-container">
-							<figure>
-								<img src="contents/sub_22_image_8.png">
 							</figure>
 						</div>
 					</div>
@@ -221,52 +232,35 @@
 						햇살이 가장 큰 장식이 된 주방 
 					</h4>
 					<p>
-						주방은 꾸미기보다 덜어내는 데 집중했다. 창으로 들어오는 햇살을 가장 큰 장식이라 생각했고, 그 안을 채우는 요리들이 곧 공간을 완성한다고 여겼다. 전체적으로는 밝고 따뜻한 아이보리에 우드 상판을 더해 편안한 분위기를 만들었다.
+						주방은 가장 많은 시간과 정성을 들인 공간이다. 옛날 주방에는 기둥과 기둥 사이에 커다란 그릇장이 자리하고 있었지만, 공간 활용을 위해 과감히 철거했다. 대신 대나무 숲을 마주보는 방향으로 싱크대를 배치했다. 무엇보다 요리하면서도 답답하지 않게, 자연을 바라보며 숨 쉴 수 있는 주방을 만들고 싶었다.
 					</p>
 					<p>
-						타일을 고를 때는 작은 타일을 많이 쓰는 것이 일반적이라 했지만, 벽 자체의 디자인보다 햇살이 닿아 밝고 따스한 느낌이 나길 바랐다. 청소도 쉽도록 고민하다가 큰 타일을 선택했고, 상부장을 없애 벽면을 드러낸 것도 공간을 넓어 보이게 했다. 조리 공간은 충분히 확보해 어떤 요리든 편안하게 즐길 수 있도록 했다.
-					</p>
-					<p>
-						주방과 맞닿은 거실에는 커다란 우드슬랩 테이블 하나만 두었다. 텔레비전도, 소파도 없는 이 공간은 언뜻 단조롭고 즐길 거리가 없어 보인다. 그러나 이곳은 단순히 쉬어가는 곳이 아니라, 두 사람의 일상과 취미, 그리고 환대가 스며드는 무대다.
+						나무로 다리를 짜고 원목 상판을 얹은 싱크대는 그녀의 손으로 완성됐다. 천을 달아 투박하지만 따뜻한 감성을 더했다. ‘이렇게 만들어도 될까?’ 싶었지만, 지금까지도 멀쩡히 제 역할을 하고 있다. 예전 그릇장이 있던 자리에는 빈티지 찬장을 들였다. 벽에는 유럽풍 미장 마감으로 흙의 질감을 살리고, 작은 찻잔과 오래된 그릇들이 선반 위를 채웠다. 세월의 흔적이 묻은 소품들이 주방의 분위기를 한층 더 깊고 아늑하게 만들어준다.
 					</p>
 
 					<div class="article-image">
 						<div class="article-image-container">
 							<figure>
-								<img src="contents/sub_22_image_5.png">
-							</figure>
-						</div>
-					</div>
-					<div class="house-box" style="margin-top: -3rem;margin-bottom: 0;">
-						<div>
-							<h5>주방</h5>
-							<p>
-								손님이 찾아오면 주방에서 갓 구운 피자를 곧장 테이블로 옮기고, 테이블과 연결된 조리대에는 음식을 차려 뷔페처럼 함께 즐기기도 합니다. 이 테이블은 식탁의 역할을 할 뿐만 아니라, 그림을 그리고 글을 쓰는 작업대로도 활용되고 있습니다.
-							</p>
-						</div>
-					</div>
-					<h4>자연이 들려주는 자장가, 그리고 계절이 채워주는 삶</h4>
-					<p>
-						시골에서 들리는 개구리와 풀벌레 소리는 부부에게 가장 좋은 자장가였다. 숙면이 중요한 부부는 각자 퀸사이즈 침대를 두고, 자연이 들려주는 소리를 들으며 온전히 쉬는 기쁨을 누린다. 티브이 대신 빔을 설치해, 침실은 부부만의 영화관이자 휴식 공간이 됐다.
-					</p>
-					<p> 
-						마당은 두 사람이 직접 공사해 만든 또 다른 쉼터다. 땅을 고르고 잔디를 심고, 텃밭을 일구어 직접 키운 작물을 수확해 요리하는 재미가 생겼다. 이웃이 나눠주는 작물까지 더해져, 시골에서의 삶은 계절의 흐름에 따라 자연스럽게 이어지고 있다.
-					</p>
-					<div class="dual-house">
-						<div class="house-image">
-							<figure>
 								<img src="contents/sub_22_image_3.png">
 							</figure>
 						</div>
-						<div class="house-box">
-							<div>
-								<h5>정원</h5>
-								<p>
-									처음 잔디를 심기 위해 흙을 들여올 때는 5톤 트럭이 동원됐어요. 마치 산을 깎아내는 듯한 기분이 들었지요. 직접 하겠다고 고집한 탓에 왜 이렇게까지 고생을 하나 싶었지만, 막상 완성된 모습을 보니 그만큼 뿌듯했습니다.
-								</p>
-							</div>
+					</div>
+					<div class="house-box" style="margin-top: -3rem;">
+						<div>
+							<h5>주방</h5>
+							<p>
+								싱크대 위쪽으로 창을 내야 했기에 상부장을 둘 수 없었어요. 그래서 부족한 수납 공간은 아일랜드 식탁을 만들어서 해결했어요.
+							</p>
 						</div>
 					</div>
+
+					<h4>서까래 아래, 삶이 머무는 거실</h4>
+					<p>
+						거실과 마루를 가르던 벽을 허물자, 집은 훨씬 넓고 열린 공간을 가지게 됐다. 작지만 답답하지 않은 집, 연화가 꿈꾸던 공간의 첫걸음이었다.
+					</p>
+					<p>
+						안방과 거실 사이에는 작은 문 하나만 남겨 자연스러운 경계를 두었다. 오래된 자개장은 당근마켓에서 나눔 받은 것이고, 비단 방석은 할머니 댁에서 가져온 것이다. 세월의 결이 다른 물건들이 한 공간 안에서 조용히 어우러진다. 소파에 앉으면 천장의 서까래가 시선을 붙든다. 연화가 손수 닦고 오일 스테인을 입힌 나무는, 구불구불한 결이 그대로 살아 있다. 삐뚤삐뚤한 모습이 오히려 자연스럽다는 연화는, 이 집의 아름다움은 완벽함보다는 ‘살아 있음’에 있다고 말한다. 내벽은 유럽식 미장으로, 흙빛의 질감이 공간에 깊이를 더한다. 바닥은 미끄럽지 않은 포세린 타일로 마감해 포비가 마음껏 뛰어다닐 수 있도록 했다. 
+					</p>
 					<div class="article-image">
 						<div class="article-image-container">
 							<figure>
@@ -274,56 +268,49 @@
 							</figure>
 						</div>
 					</div>
-					<div class="house-box" style="margin-top: 0rem;">
-						<div style="margin-left:35%">
-							<h5>안방</h5>
-							<p>
-								이전에는 단출한 가구와 매트리스 하나만 놓인 평범한 방이었습니다. 지금은 마치 스테이에 온 듯한 분위기로 변했지요. 퀸사이즈 침대 두 개를 나란히 두고, 따뜻한 조명과 헤드보드를 더해 한층 아늑하게 꾸몄습니다. 부부만의 호텔 같은 휴식 공간이 완성된 셈입니다.
-							</p>
-						</div>
-					</div>
-					<div class="article-image">
-						<div class="article-image-container">
-							<figure>
-								<img src="contents/sub_22_image_6.png">
-							</figure>
-						</div>
-					</div>
 					<div class="house-box">
-						<div style="margin-left:35%">
-							<h5>컨테이너 카페</h5>
+						<div>
+							<h5>거실</h5>
 							<p>
-								마당 한쪽에는 낡은 중고 컨테이너를 들여와 카페처럼 개조한 공간이 있습니다. 바리스타를 꿈꾸던 남편을 위한 곳이지요. 손님이 오면 커피를 내어 함께 나누고, 아이스크림을 만들어 동네 어르신들과도 즐기고는 해요. 카페 앞에는 데크를 설치해 브런치를 먹거나 바비큐 파티를 열기도 합니다. 겨울에는 난로를 두고 어묵탕을 끓여 먹으며, 부부만의 낭만을 더하는 공간이 됩니다.
+								마루에서 작은 문을 열고 들어가면 침실이 나왔어요. 공간이 아기자기하게 나뉘어있었는데, 실생활을 하기에는 불편할 것 같았어요. 그래서 결국은 거실과 침실 사이의 벽을 철거했는데, 대신에 안방으로 들어가는 작은 문은 남겨뒀어요. 나름대로 침실과 거실을 구분하는 파티션 역할을 하고 있답니다.
 							</p>
 						</div>
 					</div>
-					<h4>자연과 함께하는 삶, ‘버드피딩’</h4>
+
+					<h4>온기가 느껴지는 마당</h4>
 					<p>
-						한솔은 오래전부터 자연과 더불어 사는 삶을 꿈꿔왔다. 그중 하나가 바로 버드피딩(Bird Feeding)이다. 이름 그대로 새들에게 먹이를 주는 활동으로, 특히 겨울처럼 먹이를 찾기 어려운 계절에는 작은 생명들에게 소중한 쉼터가 되어준다.
+						마당은 ‘초록나무집’의 마지막 퍼즐이자, 가장 따뜻한 공간이다. 연화는 싱크대를 만들고 남은 나무로 직접 대문을 짜고, 그 위에 강아지 모양 우체통을 달았다. 그녀가 바란 건 거창한 조형물이 아니라, 일상 속에서 스며드는 온기였다.
 					</p>
 					<p>
-						한솔이 버드피딩을 시작한 이유는 단순했다. 새들과 조금 더 가까워지고 싶었기 때문이다. 백설공주처럼 대화를 나눌 수는 없지만, 최소한 새들 사이에서 ‘맛집’으로 소문나는 집이 될 수는 있다고 믿었다. 실제로 마당에 모이통을 달고, 과일을 가지에 꽂아두고, 다양한 견과류를 내어놓자 여러 종의 새들이 찾아와 집은 어느새 새들의 핫플레이스가 됐다. 
+						철거 과정에서 나온 구들장은 현관 앞 디딤돌로 다시 태어났고, 크고 작은 돌들은 뒷마당의 돌담으로 쌓였다. 버려질 뻔한 것들이 제자리를 찾아가며, 집은 점점 더 단단해졌다.
 					</p>
 					<p>
-						마당에 앉아 새들이 모이를 쪼아 먹는 모습을 지켜보는 시간은 ‘새멍’이라 부르며 즐기는 특별한 일상이 됐다. 찾아온 손님들도 이 풍경 앞에서는 모두 발걸음을 멈추고 잠시 힐링을 맛보고 돌아간다. 한솔의 할아버지 역시 새들을 한참 바라보다 집에 모이통을 달아야겠다고 말씀하셨을 정도다.
+						돌과 나뭇가지로 둘러싼 작은 화단에는 봄이면 라일락 향기가 번지고, 여름이면 목수국이 피어난다. 뒤편에는 새로 심은 능소화 한 그루가 자리 잡았다. 올여름, 그 능소화가 드디어 첫 꽃을 피웠다. 그 순간, 연화는 집이 완성되었음을 느꼈다.
 					</p>
 					<p>
-						무엇보다 한솔에게 버드피딩은 단순한 취미가 아니라, 기후 변화와 서식지 파괴로 힘겨운 시간을 보내는 작은 생명들을 돕는 일이다. 그렇게 자연을 가까이 두고 바라보며, 한솔은 매일 ‘함께 살아가고 있다’는 사실을 새롭게 깨닫는다. 
+						1년이 넘는 시간 동안의 리모델링 끝에, 그녀는 집과 함께 자신 또한 단단해졌음을 깨달았다. 지금 연화는 그 모든 경험을 전자책에 담고 있다. 공사비와 자재, 시행착오, 그리고 마음의 변화까지. 그녀의 ‘초록나무집’ 이야기는 오늘도 유튜브 초록나무집, 인스타그램 @yeonhwa.bby에서 조용히 이어지고 있다. 
 						<i class="icon_last"></i>
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
 							<figure>
-								<img src="contents/sub_22_image_7.png">
+								<img src="contents/sub_22_image_5.png">
 							</figure>
 						</div>
 					</div>
 					<div class="house-box">
 						<div>
-							<h5>버드피딩</h5>
+							<h5>마당</h5>
 							<p>
-								일반적으로 견과류, 곡식, 곤충, 과일 등을 준비하면 된답니다. 준비하는 먹이의 종류마다 찾아오는 새의 종도 달라져요. 그릇이나 모이통에 먹이를 담고, 아니 그냥 바닥에만 둬도 새가 찾아와요.
+								돌과 나뭇가지로 자그마한 화단을 만들었어요. 봄에는 라일락 향기가 나고 여름에는 목수국이 그 자리를 빛내주는 화단이에요. 무엇보다 집을 꾸미면서 오는 건 오는 대로, 가는 건 가는 대로 받아들이고 나아가는 법을 배웠어요. 흐르는 물은 손으로 막아도 흘러가고야 말잖아요. 몸을 맡기고 기꺼이 흘러가기로 하니 그런 삶도 나름의 재미가 있네요.
 							</p>
+						</div>
+					</div>
+					<div class="article-image big-image">
+						<div class="article-image-container">
+							<figure>
+								<img src="contents/sub_22_image_6.png">
+							</figure>
 						</div>
 					</div>
 				</div>
